Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37683

JS engine does not update all timezone state when calling timeZoneUpdated

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.1
    • 5.2.1
    • None
    • Ubuntu 14.04 (Trusty), packages from distro repository
    • 476ebf976f3010f3593cec34e5d9b31335ad72a4 (qtdeclarative)

    Description

      When running the attached file and then changing the system timezone, it takes two calls to Date.timeZoneUpdated() for the Text component to show the date in the new timezone. After the first one, only the timezone is updated.

      This also affects "new Date().getTimezoneOffset()" - our application displays a list of locations and allows the user to select from these to set the timezone, then displaying the UTC offset. The effect in this case is that the displayed offset lags by one selection (corresponding to a call to Date.timeZoneUpdated()).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laney Iain Lane
            laney Iain Lane
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes