Call tzset() from getLocalTZA() so we learn about tz changes

Per POSIX, localtime_r isn't required to call tzset(). This means that
we don't notice that the timezone has changed when calling
Date.timeZoneUpdated() from JS.

Call this in getLocalTZA() so that it always returns results pertaining
to the selected timezone.

Task-number: QTBUG-37683

Change-Id: Ia9098ef0100b7c909a82b125a5ea4f39fba1f306
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>